--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -1301,7 +1301,7 @@ if (adminEmail && userName) {
 // Fetch users from server (adapted from home.js)
 async function fetchUsersFromServer(email) {
     try {
-        const res = await fetch(`https://beemazing.onrender.com/get-users?adminEmail=${encodeURIComponent(email)}`);
+        const res = await fetch(`https://beemazing1.onrender.com/get-users?adminEmail=${encodeURIComponent(email)}`);
         const data = await res.json();
         if (data.success) {
             const allUserData = JSON.parse(localStorage.getItem("userData")) || {};
@@ -1333,7 +1333,7 @@ async function fetchUsersFromServer(email) {
 async function deleteUserFromServer(username) {
     try {
         const res = await fetch(
-            `https://beemazing.onrender.com/delete-user?adminEmail=${encodeURIComponent(adminEmail)}&username=${encodeURIComponent(username)}`,
+            `https://beemazing1.onrender.com/delete-user?adminEmail=${encodeURIComponent(adminEmail)}&username=${encodeURIComponent(username)}`,
             {
                 method: "DELETE",
                 headers: { "Content-Type": "application/json" }
@@ -1427,7 +1427,7 @@ document.getElementById("submitUserBtn").addEventListener("click", async () => {
   const role = document.querySelector('input[name="beeRole"]:checked').value;
 
   try {
-    const res = await fetch("https://beemazing.onrender.com/add-user", {
+    const res = await fetch("https://beemazing1.onrender.com/add-user", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
@@ -1698,7 +1698,7 @@ savePermissionBtn.addEventListener("click", async () => {
         allUserData[adminEmail].permissions[selectedUserForPermission] = document.getElementById("permissionSelect").value;
         localStorage.setItem("userData", JSON.stringify(allUserData));
         try {
-            const res = await fetch("https://beemazing.onrender.com/save-permissions", {
+            const res = await fetch("https://beemazing1.onrender.com/save-permissions", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
@@ -1842,7 +1842,7 @@ async function handleDecision(title, date, index, decision, user, event) {
     });
 
     // Fetch task data to check completion status
-    const res = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`);
+    const res = await fetch(`https://beemazing1.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`);
     const data = await res.json();
     if (!res.ok) throw new Error(data.error || "Failed to load tasks");
 
@@ -1864,7 +1864,7 @@ async function handleDecision(title, date, index, decision, user, event) {
       throw new Error("User has already completed the maximum number of tasks for this day");
     }
 
-    const response = await fetch("https://beemazing.onrender.com/api/review-task", {
+    const response = await fetch("https://beemazing1.onrender.com/api/review-task", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
@@ -1933,7 +1933,7 @@ async function handleReplace(title, date, index, user, event) {
   }
 
   try {
-    const response = await fetch("https://beemazing.onrender.com/api/replace-user", {
+    const response = await fetch("https://beemazing1.onrender.com/api/replace-user", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
@@ -1982,7 +1982,7 @@ async function handleRevert(title, date, index, user, event) {
       btn.style.opacity = "0.5";
     });
 
-    const response = await fetch("https://beemazing.onrender.com/api/revert-decision", {
+    const response = await fetch("https://beemazing1.onrender.com/api/revert-decision", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
@@ -2019,7 +2019,7 @@ async function handleRevert(title, date, index, user, event) {
 
 async function loadTasks() {
   try {
-    const res = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
+    const res = await fetch(`https://beemazing1.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
       cache: "no-store"
     });
     if (!res.ok) throw new Error(`HTTP error ${res.status}`);
@@ -2181,7 +2181,7 @@ async function loadYourTasks() {
     }
 
     try {
-        const res = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
+        const res = await fetch(`https://beemazing1.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
             cache: "no-store"
         });
         const data = await res.json();
@@ -2191,7 +2191,7 @@ async function loadYourTasks() {
         const todayStr = selectedDate || new Date().toISOString().split("T")[0];
 
         // Get user permissions to detect if currentUser is admin
-        const userRes = await fetch(`https://beemazing.onrender.com/get-users?adminEmail=${encodeURIComponent(adminEmail)}`);
+        const userRes = await fetch(`https://beemazing1.onrender.com/get-users?adminEmail=${encodeURIComponent(adminEmail)}`);
         const userData = await userRes.json();
         const isAdmin = userData.permissions?.[currentUser] === "Admin";
 
@@ -2264,7 +2264,7 @@ async function loadYourTasks() {
 async function submitTaskCompletion(title, date, user) {
     try {
         const adminEmail = localStorage.getItem("currentAdminEmail");
-        const response = await fetch("https://beemazing.onrender.com/api/complete-task", {
+        const response = await fetch("https://beemazing1.onrender.com/api/complete-task", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({
@@ -2406,7 +2406,7 @@ async function loadOverdueTasks() {
   overdueContainer.innerHTML = "<p>Loading...</p>";
 
   try {
-    const res = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`);
+    const res = await fetch(`https://beemazing1.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`);
     const data = await res.json();
     if (!res.ok) throw new Error(data.error || "Failed to load tasks");
 
@@ -2497,7 +2497,7 @@ async function loadPendingTasks() {
   console.log("🔍 loadPendingTasks: Fetching pending tasks", { adminEmail });
 
   try {
-    const res = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
+    const res = await fetch(`https://beemazing1.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
     const data = await res.json();
     if (!res.ok) {
       throw new Error(data.error || "Failed to load tasks");
@@ -2554,7 +2554,7 @@ async function handleDecision(title, date, selectedDate, index, decision, user, 
   console.log("🔍 handleDecision: Processing", { title, date, selectedDate, index, decision, user, repetition, adminEmail });
 
   try {
-    const response = await fetch("https://beemazing.onrender.com/api/review-task", {
+    const response = await fetch("https://beemazing1.onrender.com/api/review-task", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ adminEmail, title, date, selectedDate, user, decision, index, repetition })
@@ -2597,7 +2597,7 @@ async function loadPendingRewardRequests() {
     rewardContainer.innerHTML = "<p>Loading...</p>";
 
     try {
-        const response = await fetch(`https://beemazing.onrender.com/api/reward-requests?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
+        const response = await fetch(`https://beemazing1.onrender.com/api/reward-requests?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
             cache: "no-store"
         });
         const data = await response.json();
@@ -2644,7 +2644,7 @@ async function reviewReward(requestIndex, decision) {
         });
 
         // Fetch current reward requests to get the request details
-        const response = await fetch(`https://beemazing.onrender.com/api/reward-requests?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
+        const response = await fetch(`https://beemazing1.onrender.com/api/reward-requests?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
             cache: "no-store"
         });
         const data = await response.json();
@@ -2655,7 +2655,7 @@ async function reviewReward(requestIndex, decision) {
         if (!request) throw new Error("Reward request not found");
 
         // Update the reward request status
-        const reviewResponse = await fetch("https://beemazing.onrender.com/api/review-reward", {
+        const reviewResponse = await fetch("https://beemazing1.onrender.com/api/review-reward", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ adminEmail, requestIndex, decision })
@@ -2664,7 +2664,7 @@ async function reviewReward(requestIndex, decision) {
         if (!reviewResponse.ok) throw new Error(reviewData.error || "Failed to process reward request");
 
         // If approved or declined, remove the request from pending requests
-        const deleteResponse = await fetch("https://beemazing.onrender.com/api/delete-reward-request", {
+        const deleteResponse = await fetch("https://beemazing1.onrender.com/api/delete-reward-request", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ adminEmail, requestIndex })
