--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -383,7 +383,7 @@ document.querySelectorAll('.footer a').forEach(link => {
   
       async function getUserHoney(userName) {
           try {
-              const response = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
+              const response = await fetch(`https://beemazing1.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
               const data = await response.json();
               if (!response.ok) throw new Error(data.error || "Failed to fetch user rewards");
               const rewards = data.rewards || {};
@@ -425,19 +425,19 @@ document.querySelectorAll('.footer a').forEach(link => {
         document.getElementById('honeyBalance').textContent = userHoney;
 
         // Fetch market rewards
-        const marketResponse = await fetch(`https://beemazing.onrender.com/api/market-rewards?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
+        const marketResponse = await fetch(`https://beemazing1.onrender.com/api/market-rewards?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
         const marketData = await marketResponse.json();
         if (!marketResponse.ok) throw new Error(marketData.error || "Failed to fetch market rewards");
         const marketRewards = marketData.rewards || [];
 
         // Fetch user rewards
-        const userRewardsResponse = await fetch(`https://beemazing.onrender.com/api/user-rewards?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
+        const userRewardsResponse = await fetch(`https://beemazing1.onrender.com/api/user-rewards?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
         const userRewardsData = await userRewardsResponse.json();
         if (!userRewardsResponse.ok) throw new Error(userRewardsData.error || "Failed to fetch user rewards");
         const userRewards = (userRewardsData.userRewards || {})[userName] || [];
 
         // Fetch pending reward requests
-        const pendingResponse = await fetch(`https://beemazing.onrender.com/api/reward-requests?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
+        const pendingResponse = await fetch(`https://beemazing1.onrender.com/api/reward-requests?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
         const pendingData = await pendingResponse.json();
         if (!pendingResponse.ok) throw new Error(pendingData.error || "Failed to fetch pending reward requests");
         const pendingRequests = (pendingData.requests || []).filter(req => req.user === userName && req.status === "pending");
@@ -534,7 +534,7 @@ document.querySelectorAll('.footer a').forEach(link => {
         }
 
         // Load reward history (including pending requests)
-        const historyResponse = await fetch(`https://beemazing.onrender.com/api/reward-history?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
+        const historyResponse = await fetch(`https://beemazing1.onrender.com/api/reward-history?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
         const historyData = await historyResponse.json();
         if (!historyResponse.ok) throw new Error(historyData.error || "Failed to fetch reward history");
         const rewardHistory = (historyData.rewardHistory || {})[userName] || [];
@@ -606,7 +606,7 @@ async function claimReward(userName, rewardName, rewardType, honey, outcomes) {
         }
 
         // Deduct points immediately
-        const response = await fetch("https://beemazing.onrender.com/api/reward-request", {
+        const response = await fetch("https://beemazing1.onrender.com/api/reward-request", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({
@@ -721,7 +721,7 @@ async function claimReward(userName, rewardName, rewardType, honey, outcomes) {
               if (isNaN(qty) || qty <= 0) {
                   throw new Error("Invalid quantity selected");
               }
-              const userRewardsResponse = await fetch(`https://beemazing.onrender.com/api/user-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
+              const userRewardsResponse = await fetch(`https://beemazing1.onrender.com/api/user-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
               const userRewardsData = await userRewardsResponse.json();
               if (!userRewardsResponse.ok) throw new Error(userRewardsData.error || "Failed to fetch user rewards");
               const userRewards = userRewardsData.userRewards || {};
@@ -738,13 +738,13 @@ async function claimReward(userName, rewardName, rewardType, honey, outcomes) {
                   rewards.splice(rewardIndex, 1);
               }
   
-              await fetch("https://beemazing.onrender.com/api/user-rewards", {
+              await fetch("https://beemazing1.onrender.com/api/user-rewards", {
                   method: "POST",
                   headers: { "Content-Type": "application/json" },
                   body: JSON.stringify({ adminEmail, userRewards: { [userName]: rewards } })
               });
   
-              const tasksResponse = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}`);
+              const tasksResponse = await fetch(`https://beemazing1.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}`);
               const tasksData = await tasksResponse.json();
               if (!tasksResponse.ok) throw new Error(tasksData.error || "Failed to fetch tasks");
               const allTasks = tasksData.tasks || [];
@@ -789,7 +789,7 @@ async function claimReward(userName, rewardName, rewardType, honey, outcomes) {
           const selectedUser = document.getElementById("userSelect").value;
   
           try {
-              const tasksResponse = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}`);
+              const tasksResponse = await fetch(`https://beemazing1.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}`);
               const tasksData = await tasksResponse.json();
               if (!tasksResponse.ok) throw new Error(tasksData.error || "Failed to fetch tasks");
               const tasks = tasksData.tasks || [];
@@ -815,7 +815,7 @@ async function claimReward(userName, rewardName, rewardType, honey, outcomes) {
               task.originalOwner[selectedUser] = userName;
               task.turn = selectedUser;
   
-              await fetch("https://beemazing.onrender.com/api/tasks", {
+              await fetch("https://beemazing1.onrender.com/api/tasks", {
                   method: "POST",
                   headers: { "Content-Type": "application/json" },
                   body: JSON.stringify({ adminEmail, task })
