--- a/mobile/4-Market/addreward.html
+++ b/mobile/4-Market/addreward.html
@@ -202,7 +202,7 @@
     // Function to fetch existing rewards from MongoDB
     async function fetchRewards() {
       try {
-        const response = await fetch(`https://beemazing.onrender.com/api/market-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
+        const response = await fetch(`https://beemazing1.onrender.com/api/market-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
         const data = await response.json();
         if (!response.ok) {
           throw new Error(data.error || "Failed to fetch rewards");
@@ -217,7 +217,7 @@
     // Function to save rewards to MongoDB
     async function saveRewards(rewards) {
       try {
-        const response = await fetch("https://beemazing.onrender.com/api/market-rewards", {
+        const response = await fetch("https://beemazing1.onrender.com/api/market-rewards", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ adminEmail, rewards })
